--- a/index.html
+++ b/index.html
@@ -237,6 +237,79 @@
             </div>
         </section>
 
+        <!-- Modal 1 -->
+        <div id="modal1" class="modal fade">
+            <div class="modal-dialog modal-lg mt-7">
+                <div class="modal-content p-5">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="image-container">
+                                <img
+                                    src="images/description.png"
+                                    alt=""
+                                    class="img-fluid"
+                                />
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="text-container">
+                                <h2 class="display-6">
+                                    Unlock Your Blogging Potential
+                                </h2>
+                                <p>
+                                    Are you ready to unleash your true blogging
+                                    potential? Our ebook, "Blog Mastery,"
+                                    provides you with the tools and knowledge to
+                                    take your blog to the next level.
+                                </p>
+                                <ul class="list-group list-group-flush lh-lg">
+                                    <li class="list-group-item">
+                                        <i
+                                            class="fas fa-square text-primary"
+                                        ></i>
+                                        <strong
+                                            >Unleash Your Creativity:</strong
+                                        >
+                                        Our ebook empowers you to unleash your
+                                        creativity and express your unique voice
+                                        through your blog.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i
+                                            class="fas fa-square text-primary"
+                                        ></i>
+                                        <strong>Maximize Your Reach:</strong>
+                                        Learn how to optimize your blog for
+                                        search engines.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i
+                                            class="fas fa-square text-primary"
+                                        ></i>
+                                        <strong
+                                            >Monetization Strategies:</strong
+                                        >
+                                        Discover various monetization
+                                        strategies, such as sponsored content &
+                                        affiliate marketing.
+                                    </li>
+                                </ul>
+                                <a href="" class="btn btn-primary text-white"
+                                    >Free Download</a
+                                >
+                                <button
+                                    class="btn btn-light"
+                                    data-bs-dismiss="modal"
+                                >
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
