--- a/index.html
+++ b/index.html
@@ -310,6 +310,165 @@
             </div>
         </div>
 
+        <!-- Statement -->
+        <section class="statement mb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="text-container bg-light p-5 rounded-5">
+                            <h2>Master the Art of Blogging Excellence</h2>
+                            <p>
+                                Transform your blog from a mere hobby to a
+                                thriving online business with our ebook, "Blog
+                                Mastery: Monetize Your Passion." This invaluable
+                                resource is your roadmap to turning your blog
+                                into a profitable venture. Learn how to monetize
+                                your content through various strategies such as
+                                sponsored posts, affiliate marketing, and
+                                product creation. Gain insights into building a
+                                strong brand, attracting lucrative partnerships,
+                                and maximizing your earning potential. Take the
+                                leap and unlock the financial rewards of your
+                                blogging journey.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Details 2 -->
+        <section class="details my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="image-container p-5">
+                            <img
+                                src="images/author.png"
+                                alt=""
+                                class="img-fluid"
+                            />
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div
+                            class="text-container d-flex flex-column justify-content-center h-100"
+                        >
+                            <h2 class="display-6">Craft Remarkable Content</h2>
+                            <p>
+                                Discover techniques for effective storytelling,
+                                engaging visuals, and compelling
+                                calls-to-action. Unlock the secrets of creating
+                                a consistent and authentic brand voice that sets
+                                you apart from the competition.
+                            </p>
+                            <ul class="list-group list-group-flush lh-lg">
+                                <li class="list-group-item">
+                                    <i class="fas fa-square text-primary"></i>
+                                    <strong>Embrace Your Unique Voice:</strong>
+                                    Learn how to harness the power of your
+                                    unique voice.
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-square text-primary"></i>
+                                    <strong>Spark Creativity:</strong> Explore
+                                    techniques to spark creativity and overcome
+                                    writer's block.
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-square text-primary"></i>
+                                    <strong>Engage Your Readers:</strong>
+                                    Discover strategies for creating content
+                                    that engages your readers on a deeper level.
+                                </li>
+                            </ul>
+                            <a
+                                class="btn btn-primary text-white mt-4 align-self-start"
+                                data-bs-toggle="modal"
+                                data-bs-target="#modal2"
+                                >Learn More</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Modal 2 -->
+        <div id="modal2" class="modal fade">
+            <div class="modal-dialog modal-lg mt-7">
+                <div class="modal-content p-5">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="image-container">
+                                <img
+                                    src="images/author.png"
+                                    alt=""
+                                    class="img-fluid"
+                                />
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="text-container">
+                                <h3 class="display-6">
+                                    Craft Remarkable Content
+                                </h3>
+
+                                <p>
+                                    Discover techniques for effective
+                                    storytelling, engaging visuals, and
+                                    compelling calls-to-action. Unlock the
+                                    secrets of creating a consistent and
+                                    authentic brand voice that sets you apart
+                                    from the competition.
+                                </p>
+                                <ul
+                                    class="list-group list-group-flush lh-lg mb-3"
+                                >
+                                    <li class="list-group-item">
+                                        <i
+                                            class="fas fa-square text-primary"
+                                        ></i>
+                                        <strong
+                                            >Embrace Your Unique Voice:</strong
+                                        >
+                                        Learn how to harness the power of your
+                                        unique voice.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i
+                                            class="fas fa-square text-primary"
+                                        ></i>
+                                        <strong>Spark Creativity:</strong>
+                                        Explore techniques to spark creativity
+                                        and overcome writer's block.
+                                    </li>
+                                    <li class="list-group-item">
+                                        <i
+                                            class="fas fa-square text-primary"
+                                        ></i>
+                                        <strong>Engage Your Readers:</strong>
+                                        Discover strategies for creating content
+                                        that engages your readers on a deeper
+                                        level.
+                                    </li>
+                                </ul>
+                                <a href="" class="btn btn-primary text-white"
+                                    >Free Download</a
+                                >
+                                <button
+                                    class="btn btn-light"
+                                    data-bs-dismiss="modal"
+                                >
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
     </body>
